# asolaria-asi-os

./: .gitattributes  .gitignore  Cargo.toml  FABRIC-NODE.md  README.md  TRILATERAL-OS-SURFACE-EVIDENCE-2026-07-11.md
deploy/: asolaria-asi-os.desktop  asolaria-asi-os.service  start-asolaria-asi-os.sh
scripts/: install-full-node.ps1  install-full-node.sh  install.ps1  install.sh  keygen.ps1  keygen.sh
src/: index.html  main.rs
